--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Atmospheric Sound Lamp</h1>
-        <h2>A physical instrument that combines sound and light</h2>
+        <h2>A group project alongside Gabriel Andrade</h2>
 
         
       </div>
@@ -24,8 +24,6 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a id="atmospheric-sound-lamp-is-a-group-project-alongside-gabriel-andrade" class="anchor" href="#atmospheric-sound-lamp-is-a-group-project-alongside-gabriel-andrade" aria-hidden="true"><span class="octicon octicon-link"></span></a>Atmospheric Sound Lamp is a group project alongside Gabriel Andrade.</h3>
 
 <hr>
 
