--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Atmospheric Sound Lamp by yining1023</title>
+    <title>Atmospheric Sound Lamp by yining & Gabriel</title>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Atmospheric Sound Lamp</h1>
-        <h2>A group project alongside Gabriel Andrade</h2>
+        <h2>By Yining Shi and Gabriel Andrade</h2>
 
         
       </div>
