--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <div class="container">
       <section id="main_content">
+    <div id="video"><iframe src="//player.vimeo.com/video/113624641?byline=0&amp;portrait=0" width="800" height="449" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 <p>It is a physical instrument that combines two sensations – sound and light – to bring an atmospheric experience. It is made of three white paper mache lamps on a rack. When people touch a lamp, it will emit warm light and play cosmic sounds. More specifically, the light that comes out from the lamp case with many cuts creates many small shadows in the room. The volume is determined by the area of the touch, and tune depends on the length of the touch. In addition the paper mache provides a crafty texture that encourage touches from people. People could touch two or three lamps, or touch the lamps in different orders to play with the sound and also enjoy the warmth. For adults, these lamps will bring a peaceful meditative warm experience; for kids, they will increase their curiosity on light and sound.</p>
 
