--- a/index.html
+++ b/index.html
@@ -1,45 +1,21 @@
+
 <!DOCTYPE html>
+
+
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<head>
+		<meta charset="utf-8">
+		<title>Root Note</title>
+		<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,600,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	</head>
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+	<body>
+		<div id="title">Root Note is a botanical audio interface that brings to life the dynamic relationship between plants and their surroundings.</div>
+		<div id="video"><iframe src="//player.vimeo.com/video/113624641?byline=0&amp;portrait=0" width="800" height="449" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+		<div class="text">A small garden of living plants reacts to the touch and proximity of a spectator to create an immersive and generative soundscape. Three different kinds of sensors embedded in the soil register changes in the plants’ environment such as the presence of human touch, fluctuations in light, and soil moisture level. Using an Arduino microcontroller, this data from the plants is routed into the audio synthesis environment Max where it is used to control aspects of the sound. Through their observation and interaction, the audience takes part in sculpting a real-time aural representation of the plants’ environment.<br/><br/>Root Note is a physical computing project by <a href="http://nickbratton.com/" target="_blank">Nick Bratton</a> and <a href="http://rebeccalieberman.com/" target="_blank">Rebecca Lieberman</a> made at <a href="http://itp.nyu.edu/itp/" target="_blank">NYU’s Interactive Telecommunications Program.</a> To get in touch, <a href="mailto:rebeccalieberman@gmail.com,nick.bratton@nyu.edu">email us</a>.</div>
+		<div class="text"></div>
+	</body>
 
-    <title>Atmospheric Sound Lamp by yining and Gabriel</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>Atmospheric Sound Lamp</h1>
-        <h2>By Yining Shi and Gabriel Andrade</h2>
-
-        
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-    <div id="video"><iframe src="//player.vimeo.com/video/113624641?byline=0&amp;portrait=0" width="800" height="449" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-
-<p>It is a physical instrument that combines two sensations – sound and light – to bring an atmospheric experience. It is made of three white paper mache lamps on a rack. When people touch a lamp, it will emit warm light and play cosmic sounds. More specifically, the light that comes out from the lamp case with many cuts creates many small shadows in the room. The volume is determined by the area of the touch, and tune depends on the length of the touch. In addition the paper mache provides a crafty texture that encourage touches from people. People could touch two or three lamps, or touch the lamps in different orders to play with the sound and also enjoy the warmth. For adults, these lamps will bring a peaceful meditative warm experience; for kids, they will increase their curiosity on light and sound.</p>
-
-<h3>
-<a id="implementation" class="anchor" href="#implementation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Implementation</h3>
-
-<p>We used MAX MSP to generate atmospheric sounds. Also we took aluminum paper, 12v lamps, 12v DC power supply, Arduino to build the circuits. In addition, we used old newspapers to build paper mache lamp case.</p>
-
-<h3>
-<a id="user-test" class="anchor" href="#user-test" aria-hidden="true"><span class="octicon octicon-link"></span></a>User test</h3>
-
-<p>We started with encouraging users to light the lamps by singing out loud. However, in the user test most people are not comfortable with doing so in public. Instead, they are more likely to touch and speak. Therefore, we changed our method of interaction to touching. We learned to respect the behaviors of users and create interactions that follow the trends.</p>
-      </section>
-    </div>
-
-    
-  </body>
 </html>
