--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Root Note</title>
+		<title>Atmospheric Sound Lamp</title>
 		<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,600,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	</head>
 
 	<body>
-		<div id="title">Root Note is a botanical audio interface that brings to life the dynamic relationship between plants and their surroundings.</div>
+		<div id="title">Atmospheric Sound Lamp is a physical instrument that combines two sensations – sound and light – to bring an atmospheric experience. It is made of three white paper mache lamps on a rack. When people touch a lamp, it will emit warm light and play cosmic sounds. More specifically, the light that comes out from the lamp case with many cuts creates many small shadows in the room. The volume is determined by the area of the touch, and tune depends on the length of the touch. In addition the paper mache provides a crafty texture that encourage touches from people. People could touch two or three lamps, or touch the lamps in different orders to play with the sound and also enjoy the warmth. For adults, these lamps will bring a peaceful meditative warm experience; for kids, they will increase their curiosity on light and sound..</div>
 		<div id="video"><iframe src="//player.vimeo.com/video/113624641?byline=0&amp;portrait=0" width="800" height="449" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-		<div class="text">A small garden of living plants reacts to the touch and proximity of a spectator to create an immersive and generative soundscape. Three different kinds of sensors embedded in the soil register changes in the plants’ environment such as the presence of human touch, fluctuations in light, and soil moisture level. Using an Arduino microcontroller, this data from the plants is routed into the audio synthesis environment Max where it is used to control aspects of the sound. Through their observation and interaction, the audience takes part in sculpting a real-time aural representation of the plants’ environment.<br/><br/>Root Note is a physical computing project by <a href="http://nickbratton.com/" target="_blank">Nick Bratton</a> and <a href="http://rebeccalieberman.com/" target="_blank">Rebecca Lieberman</a> made at <a href="http://itp.nyu.edu/itp/" target="_blank">NYU’s Interactive Telecommunications Program.</a> To get in touch, <a href="mailto:rebeccalieberman@gmail.com,nick.bratton@nyu.edu">email us</a>.</div>
+		<div class="text">We used MAX MSP to generate atmospheric sounds. Also we took aluminum paper, 12v lamps, 12v DC power supply, Arduino to build the circuits. In addition, we used old newspapers to build paper mache lamp case.
+		<br/>
+		<br/>Root Note is a physical computing project by <a href="http://nickbratton.com/" target="_blank">Nick Bratton</a> and <a href="http://rebeccalieberman.com/" target="_blank">Rebecca Lieberman</a> made at <a href="http://itp.nyu.edu/itp/" target="_blank">NYU’s Interactive Telecommunications Program.</a> To get in touch, <a href="mailto:rebeccalieberman@gmail.com,nick.bratton@nyu.edu">email us</a>.</div>
 		<div class="text"></div>
 	</body>
 
