--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="text">We used MAX MSP to generate atmospheric sounds. Also we took aluminum paper, 12v lamps, 12v DC power supply, Arduino to build the circuits. In addition, we used old newspapers to build paper mache lamp case.
 		<div class="text">We started with encouraging users to light the lamps by singing out loud. However, in the user test most people are not comfortable with doing so in public. Instead, they are more likely to touch and speak. Therefore, we changed our method of interaction to touching. We learned to respect the behaviors of users and create interactions that follow the trends.
 		<br/>
-		<br/>Atmospheric Sound Lamp is a physical computing project by Gabriel Andrade and <a href="http://shiyining1023.com/" target="_blank">Yining Shi</a> made at <a href="http://itp.nyu.edu/itp/" target="_blank">NYU’s Interactive Telecommunications Program.</a> To get in touch, <a href="mailto:ys2189@nyu.edu,ga987@nyu.edu">email us</a>.</div>
+		<br/>Atmospheric Sound Lamp is a physical computing project by <a href="http://www.gandradep.com" target="_blank">Gabriel Andrade</a> and <a href="http://shiyining1023.com/" target="_blank">Yining Shi</a> made at <a href="http://itp.nyu.edu/itp/" target="_blank">NYU’s Interactive Telecommunications Program.</a> To get in touch, <a href="mailto:ys2189@nyu.edu,ga987@nyu.edu">email us</a>.</div>
 		<div class="text"></div>
 	</body>
 
