--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<title>Atmospheric Sound Lamp</title>
 		<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,600,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-		
-		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+
 	</head>
 
 	<body>
